--- a/index.html
+++ b/index.html
@@ -311,7 +311,9 @@
                 for (var i = ALL_MCQS.length - 1; i >= 0 ; i--) {
                     var examYear = ALL_MCQS[i].getElementsByTagName("QText")[0].getAttribute("examyear");
                     // Add the exam year to the Set
-                    uniqueYears.add(examYear);
+                    if (examYear.includes("HKDSE")){
+                        uniqueYears.add(examYear);
+                    }
                 }
                 // Now create option elements using the unique values in the Set
                 uniqueYears.forEach(function(examYear) {
