--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             document.getElementById("result").innerHTML = MCQs_content
 
             if (year.includes("HKDSE")) {
-                document.getElementById("notificationtext").innerHTML = '<span id = "notificationtext"> 您可以在Youtube上搜尋 ' + year + ' 題解。<a href="https://www.youtube.com/results?search_query=' + year +' ICT MC" target="_blank">查看</a></span>'
+                document.getElementById("notificationtext").innerHTML = '<span id = "notificationtext"> 您可以在Youtube上搜尋 「<a href="https://www.youtube.com/results?search_query=' + year +' ICT MC" target="_blank">' + year + ' MC」</a> 題解。</span><span> 遇上困難時，您可以在POE上找到<a href="https://poe.com/HKDSE_ICT_Solver" target="_blank">「ICT 解題大師」</a></span>'
                 document.getElementById("notification").classList.remove('hidden')
             }else{
                 document.getElementById("notification").classList.add('hidden')
